--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ img {
 
 
 #hero {
-    height: 350px;
+    height: 500px;
     background-image: url("/images/leigh-on-sea-from-above.webp");
     background-size: cover;
     color: white;
@@ -33,19 +33,77 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     
 }
 
 #hero h1{
-    margin: 80px 10px 20px 10px;
+    margin: 10px 0;
     padding: 15px;
     background: #023047;
     border-radius: 15px;
 }
 #hero h2 {
-    margin: 0 70px;
-    padding: 5px;
+    margin: 10px 0;
+    padding: 10px;
     background: #8ECAE6;
     border-radius: 15px;
+}
+
+
+
+#activities {
+    background: #FFF3D6;
+    text-align: center;
+    padding: 40px 0 30px 0;
+    color: #023047;
+}
+
+#activities h3{
+    margin: 0px;
+}
+
+#activity-options-container{
+    display: flex;
+    justify-content: space-around;
+    margin: 50px 0;
+}
+
+
+.img-act{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.activity-options{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 25%
+}
+
+
+#guide-card{
+    background: #8ECAE6;
+    border-bottom: #023047 solid 5px;
+    width: 500px;
+    border-radius: 15px;
+    margin: 40px auto;
+    display: flex;
+    align-items: center;
+}
+
+#card-text{
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px;
+}
+
+
+#guide-card img{
+    margin: 10px 15px;
+    width: 200px;
+    border-radius: 10px;
+
 }
