--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ img {
 
 
 #hero {
-    height: 500px;
+    height: 100vh;
     background-image: url("/images/leigh-on-sea-from-above.webp");
     background-size: cover;
     color: white;
